--- a/miamtest2/package.json
+++ b/miamtest2/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "firebase": "^9.6.10",
+    "firebase": "^9.7.0",
+    "firebase-admin": "^10.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
